--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic.png" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/pic1.png" alt="" /></span>
 						</div>
 					</section>
 
