--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>cloneumc</title>
-		<link rek="shortcut icon" type="image/png" href="images/log1.png">
+		<link rek="shortcut icon" type="image/png" href="images/log1.png"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
