--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div>
+			<div id="wrapper">
 
 				<!-- Intro -->
 					<section class="intro">
